# micro-raytracer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
example/: CornellBox.json  CornellBox2.json  Default.json  Instance.json  Mesh.json  Minecraft.json  dof.json  frame.json  scene.json
example/Animation/: anim.sh
example/Cornell box/: frame.json  scene.json
example/CornellBox/: frame.json  scene.json
example/CornellBox2/: frame.json  scene.json
example/Default/: frame.json  scene.json
example/Minecraft/: frame.json  scene.json
src/: cli.rs  cli_parser.rs  http.rs  lib.rs  lin.rs  parser.rs  rt.rs  sampler.rs
