[package]
name = "micro-raytracer"
version = "0.1.0"
edition = "2021"
authors = ["Architector1324 <olegsajaxov@yandex.ru>"]
repository = "https://github.com/architector1324/micro-raytracer"

[[bin]]
name = "raytrace"

[[img2json]]
name = "img2json"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
rand = "0.8.5"
serde_json = "1.0.89"
serde = {version = "1.0.148", features = ["derive"]}
clap = {version="4.0.29", features = ["derive"]}
scoped_threadpool = "0.1.9"
base64 = "0.20.0"
flate2 = "1.0.25"
log = "0.4"
simplelog = "0.12.0"